@@ -1,5 +1,5 @@
 #
-# $Id: svctool.in,v 2.702 2023-09-20 00:33:12+05:30 Cprogrammer Exp mbhangui $
+# $Id: svctool.in,v 2.703 2023-09-20 21:25:28+05:30 Cprogrammer Exp mbhangui $
 #
 
 #
@@ -26,7 +26,7 @@ host=@HOST@
 shared_objects=0
 use_dlmopen=0
 skip_sendmail_check=0
-RCSID="# \$Id: svctool.in,v 2.702 2023-09-20 00:33:12+05:30 Cprogrammer Exp mbhangui $"
+RCSID="# \$Id: svctool.in,v 2.703 2023-09-20 21:25:28+05:30 Cprogrammer Exp mbhangui $"
 
 #
 # End of User Configuration
