@@ -37,6 +37,7 @@ Release @version@-@release@ Start 11/09/2023 End --/--/----
     forwarding
 32. qmail-local, svctool: added SANITIZE_ENV to clear environment variables
     for dot-qmail commands
+33. added '%' option in dot-qmail to add env variables from a directory
 
 * Fri Sep 08 2023 11:58:03 +0000 Manvendra Bhangui <indimail-mta@indimail.org> 3.0.4-1.1%{?dist}
 Release 3.0.4-1.1 Start 24/04/2023 End 08/09/2023
